Study_Spring/ResponseUtils/src/main/java/com/example/ResponseUtils/response/error/ConflictException.java
package com.example.ResponseUtils.response.error;

public class ConflictException extends RuntimeException{
    public ConflictException(ErrorResponseStatus status){
        super(status.getMessage());
    }
}
